examples/invalid/ns/memory/hello_task_glm_nested_marker_struct_payload_invalid.ns
mod cpu Main {
  struct MarkerPacket {
    ready: Marker<CpuToShader>
  }

  async fn consume(packet: MarkerPacket) -> i64 {
    return 7;
  }

  fn main() -> i64 {
    return 1;
  }
}
